# nvim-vadre

./: .gitignore  Cargo.toml  README.md  run_nvim.ps1  run_nvim.sh
examples/: run_nvim_vadre.rs  test_debugging.rs
lua/vadre/: autocmds.lua  init.lua  setup.lua  ui.lua
plugin/: nvim-vadre.lua  nvim-vadre.vim
src/: logger.rs  main.rs  neovim.rs  tokio_join.rs  util.rs
src/dap/: breakpoints.rs  debugger.rs  debuggers.rs  handler.rs  mod.rs  processor.rs  protocol.rs  schema.rs
src/dap/debuggers/: codelldb.rs  debugpy.rs  dotnet.rs  generic.rs  go_delve.rs  node.rs
src/debuggers/: breakpoints.rs  codelldb.rs  dap_protocol.rs  debugger.rs  debugpy.rs  dotnet.rs  go_delve.rs  mod.rs  node.rs
src/debuggers/dap/: debugger.rs  debuggers.rs  handler.rs  mod.rs  processor.rs  protocol.rs  schema.json  schema.rs  shared.rs
src/debuggers/dap/debuggers/: codelldb.rs  debugpy.rs  dotnet.rs  generic.rs  go_delve.rs  node.rs
src/debuggers/dap_protocol/: dap_schema.rs
src/debuggers/node/: debugger.rs  handler.rs  mod.rs  processor.rs  util.rs
test/test_progs/: test.py
test/vimfiles/: vimrc
test_files/test_progs/: test.js
test_files/test_progs/test_rust/: Cargo.toml
test_files/test_progs/test_rust/src/: main.rs
test_files/vimfiles/: mininit.lua
tests/: run_nvim_vadre.rs
