[package]
name = "nvim-vadre"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
async-trait = "0.1.53"
bytes = "1.1.0"
chrono = "0.4.19"
dirs = "4.0.0"
dunce = "1.0.2"
dyn-clone = "1.0.5"
futures = "0.3.21"
is_executable = "1.0.1"
lazy_static = "1.4.0"
nvim-rs = { version = "0.4.0", features = ["use_tokio"] }
reqwest = "0.11.10"
schemafy = "0.6.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_derive = "1.0.137"
serde_json = "1.0.79"
tokio = { version = "1.18.2", features = ["process"] }
tokio-tungstenite = "0.17.2"
tokio-util = { version = "0.7.2", features = ["codec"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = [ "env-filter" ] }
which = "4.2.5"
zip = "0.6.2"
