[package]
name = "nvim-vadre"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "*"
async-trait = "*"
bytes = "*"
chrono = "*"
clap = { version = "4.4.7", features = ["derive"] }
dirs = "*"
dunce = "*"
dyn-clone = "*"
futures = "*"
indexmap = "2.1.0"
is_executable = "*"
lazy_static = "*"
nvim-rs = { git = "https://github.com/KillTheMule/nvim-rs", branch = "nobufw", features = ["use_tokio"] }
reqwest = "*"
schemafy = "*"
serde = { version = "*", features = ["derive"] }
serde_derive = "*"
serde_json = "*"
tokio = { version = "*", features = ["process"] }
tokio-tungstenite = "*"
tokio-util = { version = "*", features = ["codec"] }
tracing = "*"
tracing-subscriber = { version = "*", features = [ "env-filter" ] }
which = "*"
zip = "*"

[dev-dependencies]
assert_fs     = "*"
escargot      = "*"
function_name = "*"
hamcrest2     = "*"
rmp           = "*"
rmpv          = "*"
serde         = "*"
serde_derive  = "*"
pty-process   = { version = "*", features = ["async"] }
